fix: complete debug pass - 7 bugs fixed
- CartServlet: replaced switch expressions with if-else (Java 8+ compat)
- AdminServlet: replaced switch expressions with if-else (Java 8+ compat)
- KioskServlet: replaced switch expressions with if-else (Java 8+ compat)
- KioskServlet: null-safe weight input parsing (prevents NPE on empty submit)
- KioskServlet: cart DB fallback via getCartItems() when session cart missing
- TransactionDAO: added getCartItems(txId) method to load items from DB
- CartServlet: handleClear now removes checkoutTotal from session
- web.xml: added error-page entries for 404, 500, and Exception
- error.jsp: new friendly error page instead of raw stack traces
- .classpath: detailed Tomcat binding fix instructions in comments
- WEB-INF/lib: added PLACE_MYSQL_JAR_HERE.txt placeholder